# Timer

./: CMakeLists.txt  README.md
src/: MainWindow.cpp  MainWindow.h  Structs.h  TimerThread.cpp  TimerThread.h  config.h  main.cpp
